<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment">

    <ListView
        android:id="@+id/my_places_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:longClickable="true"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/constraintDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ListView>

    <RadioGroup
        android:id="@+id/rgTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svTable">

        <RadioButton
            android:id="@+id/rbAutorTabela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40px"
            android:layout_marginEnd="20px"
            android:text="@string/list_fragment_autor_rb" />

        <RadioButton
            android:id="@+id/rbTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20px"
            android:layout_marginEnd="20px"
            android:text="@string/list_fragment_tip_rb" />

        <RadioButton
            android:id="@+id/rbOcena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20px"
            android:layout_marginEnd="20px"
            android:text="@string/list_fragment_ocena_rb" />

        <RadioButton
            android:id="@+id/rbDatumTabela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_fragment_datum_rb"

            />

    </RadioGroup>

    <SearchView
        android:id="@+id/svTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/my_places_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgTable">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_fragment_format_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDatumOd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_fragment_datumod_label"

            app:layout_constraintBottom_toTopOf="@id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@id/tvDatumDo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDatumOd" />

        <TextView
            android:id="@+id/tvDatumDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/list_fragment_datumdo_label"
            app:layout_constraintBottom_toTopOf="@id/editTextDate2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDate"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="45dp" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDatumDo" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_margin="40px"
            android:text="@string/list_fragment_ok_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="40px"
            android:text="@string/list_fragment_reset_label"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btnOk"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>